bnfc/ParHpl.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.11 from ParHpl.y
-----------------------------------------------------------------------------

state 140 contains 11 shift/reduce conflicts.
state 141 contains 11 shift/reduce conflicts.
state 142 contains 11 shift/reduce conflicts.
state 143 contains 11 shift/reduce conflicts.
state 144 contains 11 shift/reduce conflicts.
state 145 contains 11 shift/reduce conflicts.
state 146 contains 11 shift/reduce conflicts.
state 147 contains 11 shift/reduce conflicts.
state 148 contains 11 shift/reduce conflicts.
state 149 contains 11 shift/reduce conflicts.
state 150 contains 11 shift/reduce conflicts.
state 187 contains 11 shift/reduce conflicts.
state 191 contains 11 shift/reduce conflicts.
state 205 contains 11 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	%start_pFunctionOrRefOrType -> FunctionOrRefOrType   (1)
	%start_pListFunctionOrRefOrType -> ListFunctionOrRefOrType   (2)
	%start_pFunctionDef -> FunctionDef                 (3)
	%start_pFunctionArg -> FunctionArg                 (4)
	%start_pListFunctionArg -> ListFunctionArg         (5)
	%start_pListFunctionDef -> ListFunctionDef         (6)
	%start_pValueStatement -> ValueStatement           (7)
	%start_pListValueStatement -> ListValueStatement   (8)
	%start_pRefDef -> RefDef                           (9)
	%start_pType -> Type                               (10)
	%start_pListType -> ListType                       (11)
	%start_pAlgType -> AlgType                         (12)
	%start_pTypeArg -> TypeArg                         (13)
	%start_pListTypeArg -> ListTypeArg                 (14)
	%start_pAlgTypeVal -> AlgTypeVal                   (15)
	%start_pListAlgTypeVal -> ListAlgTypeVal           (16)
	%start_pPatternMatch -> PatternMatch               (17)
	%start_pListPatternMatch -> ListPatternMatch       (18)
	%start_pAssignment -> Assignment                   (19)
	%start_pListAssignment -> ListAssignment           (20)
	%start_pFunApplication -> FunApplication           (21)
	%start_pFunctionArgAppl -> FunctionArgAppl         (22)
	%start_pListFunctionArgAppl -> ListFunctionArgAppl   (23)
	%start_pListValueStatementr -> ListValueStatementr   (24)
	%start_pTupleValueStatementr -> TupleValueStatementr   (25)
	%start_pValueStatementExpr -> ValueStatementExpr   (26)
	Ident -> L_Ident                                   (27)
	Integer -> L_integ                                 (28)
	String -> L_quoted                                 (29)
	Program -> ListFunctionOrRefOrType                 (30)
	FunctionOrRefOrType -> FunctionDef                 (31)
	FunctionOrRefOrType -> AlgType                     (32)
	FunctionOrRefOrType -> RefDef                      (33)
	ListFunctionOrRefOrType ->                         (34)
	ListFunctionOrRefOrType -> FunctionOrRefOrType ListFunctionOrRefOrType   (35)
	FunctionDef -> 'fun' Type Ident '(' ListFunctionArg ')' '=' ValueStatement ';'   (36)
	FunctionDef -> 'sus' 'fun' Type Ident '(' ListFunctionArg ')' '=' ValueStatement ';'   (37)
	FunctionArg -> PatternMatch                        (38)
	ListFunctionArg ->                                 (39)
	ListFunctionArg -> FunctionArg                     (40)
	ListFunctionArg -> FunctionArg ',' ListFunctionArg   (41)
	ListFunctionDef ->                                 (42)
	ListFunctionDef -> FunctionDef ListFunctionDef     (43)
	ValueStatement -> 'let' ListAssignment 'in' ValueStatement   (44)
	ValueStatement -> 'force' 'let' ListAssignment 'in' ValueStatement   (45)
	ValueStatement -> 'if' ValueStatement 'then' ValueStatement 'else' ValueStatement   (46)
	ValueStatement -> ListValueStatementr              (47)
	ValueStatement -> TupleValueStatementr             (48)
	ValueStatement -> FunApplication                   (49)
	ValueStatement -> Integer                          (50)
	ValueStatement -> String                           (51)
	ValueStatement -> '{' Ident '->' ValueStatement '}'   (52)
	ValueStatement -> ValueStatement ValueStatementExpr   (53)
	ListValueStatement ->                              (54)
	ListValueStatement -> ValueStatement               (55)
	ListValueStatement -> ValueStatement ',' ListValueStatement   (56)
	RefDef -> 'ref' Type Ident '=' ValueStatement ';'   (57)
	Type -> Ident '(' ListType ')'                     (58)
	Type -> '(' Type '->' Type ')'                     (59)
	Type -> '(' ListType ')'                           (60)
	ListType ->                                        (61)
	ListType -> Type                                   (62)
	ListType -> Type ',' ListType                      (63)
	AlgType -> 'data' Ident '(' ListTypeArg ')' '=' ListAlgTypeVal ';'   (64)
	TypeArg -> Ident                                   (65)
	ListTypeArg ->                                     (66)
	ListTypeArg -> TypeArg                             (67)
	ListTypeArg -> TypeArg ',' ListTypeArg             (68)
	AlgTypeVal -> Ident '(' Type ')'                   (69)
	ListAlgTypeVal ->                                  (70)
	ListAlgTypeVal -> AlgTypeVal                       (71)
	ListAlgTypeVal -> AlgTypeVal '|' ListAlgTypeVal    (72)
	PatternMatch -> Integer                            (73)
	PatternMatch -> Ident                              (74)
	PatternMatch -> '(' ListPatternMatch ')'           (75)
	PatternMatch -> PatternMatch '(' ListPatternMatch ')'   (76)
	ListPatternMatch ->                                (77)
	ListPatternMatch -> PatternMatch                   (78)
	ListPatternMatch -> PatternMatch ',' ListPatternMatch   (79)
	Assignment -> Type '::' PatternMatch '=' ValueStatement ';'   (80)
	Assignment -> RefDef                               (81)
	ListAssignment ->                                  (82)
	ListAssignment -> Assignment ListAssignment        (83)
	FunApplication -> Ident '.' FunApplication         (84)
	FunApplication -> Ident '(' ListFunctionArgAppl ')'   (85)
	FunctionArgAppl -> ValueStatement                  (86)
	ListFunctionArgAppl ->                             (87)
	ListFunctionArgAppl -> FunctionArgAppl             (88)
	ListFunctionArgAppl -> FunctionArgAppl ',' ListFunctionArgAppl   (89)
	ListValueStatementr -> '[' ListValueStatement ']'   (90)
	TupleValueStatementr -> '(' ListValueStatement ')'   (91)
	ValueStatementExpr -> '+' ValueStatement           (92)
	ValueStatementExpr -> '-' ValueStatement           (93)
	ValueStatementExpr -> '%' ValueStatement           (94)
	ValueStatementExpr -> '*' ValueStatement           (95)
	ValueStatementExpr -> '/' ValueStatement           (96)
	ValueStatementExpr -> '<' ValueStatement           (97)
	ValueStatementExpr -> '<=' ValueStatement          (98)
	ValueStatementExpr -> '>' ValueStatement           (99)
	ValueStatementExpr -> '>=' ValueStatement          (100)
	ValueStatementExpr -> '==' ValueStatement          (101)
	ValueStatementExpr -> '!=' ValueStatement          (102)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!='           { PT _ (TS _ 1) }
	'%'            { PT _ (TS _ 2) }
	'('            { PT _ (TS _ 3) }
	')'            { PT _ (TS _ 4) }
	'*'            { PT _ (TS _ 5) }
	'+'            { PT _ (TS _ 6) }
	','            { PT _ (TS _ 7) }
	'-'            { PT _ (TS _ 8) }
	'->'           { PT _ (TS _ 9) }
	'.'            { PT _ (TS _ 10) }
	'/'            { PT _ (TS _ 11) }
	'::'           { PT _ (TS _ 12) }
	';'            { PT _ (TS _ 13) }
	'<'            { PT _ (TS _ 14) }
	'<='           { PT _ (TS _ 15) }
	'='            { PT _ (TS _ 16) }
	'=='           { PT _ (TS _ 17) }
	'>'            { PT _ (TS _ 18) }
	'>='           { PT _ (TS _ 19) }
	'['            { PT _ (TS _ 20) }
	']'            { PT _ (TS _ 21) }
	'data'         { PT _ (TS _ 22) }
	'else'         { PT _ (TS _ 23) }
	'force'        { PT _ (TS _ 24) }
	'fun'          { PT _ (TS _ 25) }
	'if'           { PT _ (TS _ 26) }
	'in'           { PT _ (TS _ 27) }
	'let'          { PT _ (TS _ 28) }
	'ref'          { PT _ (TS _ 29) }
	'sus'          { PT _ (TS _ 30) }
	'then'         { PT _ (TS _ 31) }
	'{'            { PT _ (TS _ 32) }
	'|'            { PT _ (TS _ 33) }
	'}'            { PT _ (TS _ 34) }
	L_Ident        { PT _ (TV $$) }
	L_integ        { PT _ (TI $$) }
	L_quoted       { PT _ (TL $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	%start_pFunctionOrRefOrType rule  1
	%start_pListFunctionOrRefOrType rule  2
	%start_pFunctionDef rule  3
	%start_pFunctionArg rule  4
	%start_pListFunctionArg rule  5
	%start_pListFunctionDef rule  6
	%start_pValueStatement rule  7
	%start_pListValueStatement rule  8
	%start_pRefDef  rule  9
	%start_pType    rule  10
	%start_pListType rule  11
	%start_pAlgType rule  12
	%start_pTypeArg rule  13
	%start_pListTypeArg rule  14
	%start_pAlgTypeVal rule  15
	%start_pListAlgTypeVal rule  16
	%start_pPatternMatch rule  17
	%start_pListPatternMatch rule  18
	%start_pAssignment rule  19
	%start_pListAssignment rule  20
	%start_pFunApplication rule  21
	%start_pFunctionArgAppl rule  22
	%start_pListFunctionArgAppl rule  23
	%start_pListValueStatementr rule  24
	%start_pTupleValueStatementr rule  25
	%start_pValueStatementExpr rule  26
	Ident           rule  27
	Integer         rule  28
	String          rule  29
	Program         rule  30
	FunctionOrRefOrType rules 31, 32, 33
	ListFunctionOrRefOrType rules 34, 35
	FunctionDef     rules 36, 37
	FunctionArg     rule  38
	ListFunctionArg rules 39, 40, 41
	ListFunctionDef rules 42, 43
	ValueStatement  rules 44, 45, 46, 47, 48, 49, 50, 51, 52, 53
	ListValueStatement rules 54, 55, 56
	RefDef          rule  57
	Type            rules 58, 59, 60
	ListType        rules 61, 62, 63
	AlgType         rule  64
	TypeArg         rule  65
	ListTypeArg     rules 66, 67, 68
	AlgTypeVal      rule  69
	ListAlgTypeVal  rules 70, 71, 72
	PatternMatch    rules 73, 74, 75, 76
	ListPatternMatch rules 77, 78, 79
	Assignment      rules 80, 81
	ListAssignment  rules 82, 83
	FunApplication  rules 84, 85
	FunctionArgAppl rule  86
	ListFunctionArgAppl rules 87, 88, 89
	ListValueStatementr rule  90
	TupleValueStatementr rule  91
	ValueStatementExpr rules 92, 93, 94, 95, 96, 97, 98, 99, 100, 101, 102

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'data'         shift, and enter state 85
	'fun'          shift, and enter state 95
	'ref'          shift, and enter state 68
	'sus'          shift, and enter state 96
	%eof           reduce using rule 34

	Program        goto state 108
	FunctionOrRefOrTypegoto state 102
	ListFunctionOrRefOrTypegoto state 109
	FunctionDef    goto state 104
	RefDef         goto state 105
	AlgType        goto state 106

State 1


	'data'         shift, and enter state 85
	'fun'          shift, and enter state 95
	'ref'          shift, and enter state 68
	'sus'          shift, and enter state 96

	FunctionOrRefOrTypegoto state 107
	FunctionDef    goto state 104
	RefDef         goto state 105
	AlgType        goto state 106

State 2


	'data'         shift, and enter state 85
	'fun'          shift, and enter state 95
	'ref'          shift, and enter state 68
	'sus'          shift, and enter state 96
	%eof           reduce using rule 34

	FunctionOrRefOrTypegoto state 102
	ListFunctionOrRefOrTypegoto state 103
	FunctionDef    goto state 104
	RefDef         goto state 105
	AlgType        goto state 106

State 3


	'fun'          shift, and enter state 95
	'sus'          shift, and enter state 96

	FunctionDef    goto state 101

State 4


	'('            shift, and enter state 74
	L_Ident        shift, and enter state 28
	L_integ        shift, and enter state 58

	Ident          goto state 70
	Integer        goto state 71
	FunctionArg    goto state 100
	PatternMatch   goto state 99

State 5


	'('            shift, and enter state 74
	L_Ident        shift, and enter state 28
	L_integ        shift, and enter state 58
	%eof           reduce using rule 39

	Ident          goto state 70
	Integer        goto state 71
	FunctionArg    goto state 97
	ListFunctionArggoto state 98
	PatternMatch   goto state 99

State 6


	'fun'          shift, and enter state 95
	'sus'          shift, and enter state 96
	%eof           reduce using rule 42

	FunctionDef    goto state 93
	ListFunctionDefgoto state 94

State 7


	'('            shift, and enter state 42
	'['            shift, and enter state 44
	'force'        shift, and enter state 54
	'if'           shift, and enter state 55
	'let'          shift, and enter state 56
	'{'            shift, and enter state 57
	L_Ident        shift, and enter state 28
	L_integ        shift, and enter state 58
	L_quoted       shift, and enter state 59

	Ident          goto state 45
	Integer        goto state 46
	String         goto state 47
	ValueStatement goto state 92
	FunApplication goto state 49
	ListValueStatementrgoto state 52
	TupleValueStatementrgoto state 53

State 8


	'('            shift, and enter state 42
	'['            shift, and enter state 44
	'force'        shift, and enter state 54
	'if'           shift, and enter state 55
	'let'          shift, and enter state 56
	'{'            shift, and enter state 57
	L_Ident        shift, and enter state 28
	L_integ        shift, and enter state 58
	L_quoted       shift, and enter state 59
	%eof           reduce using rule 54

	Ident          goto state 45
	Integer        goto state 46
	String         goto state 47
	ValueStatement goto state 90
	ListValueStatementgoto state 91
	FunApplication goto state 49
	ListValueStatementrgoto state 52
	TupleValueStatementrgoto state 53

State 9


	'ref'          shift, and enter state 68

	RefDef         goto state 89

State 10


	'('            shift, and enter state 67
	L_Ident        shift, and enter state 28

	Ident          goto state 62
	Type           goto state 88

State 11


	'('            shift, and enter state 67
	L_Ident        shift, and enter state 28
	%eof           reduce using rule 61

	Ident          goto state 62
	Type           goto state 86
	ListType       goto state 87

State 12


	'data'         shift, and enter state 85

	AlgType        goto state 84

State 13


	L_Ident        shift, and enter state 28

	Ident          goto state 80
	TypeArg        goto state 83

State 14


	L_Ident        shift, and enter state 28
	%eof           reduce using rule 66

	Ident          goto state 80
	TypeArg        goto state 81
	ListTypeArg    goto state 82

State 15


	L_Ident        shift, and enter state 28

	Ident          goto state 76
	AlgTypeVal     goto state 79

State 16


	L_Ident        shift, and enter state 28
	%eof           reduce using rule 70

	Ident          goto state 76
	AlgTypeVal     goto state 77
	ListAlgTypeVal goto state 78

State 17


	'('            shift, and enter state 74
	L_Ident        shift, and enter state 28
	L_integ        shift, and enter state 58

	Ident          goto state 70
	Integer        goto state 71
	PatternMatch   goto state 75

State 18


	'('            shift, and enter state 74
	L_Ident        shift, and enter state 28
	L_integ        shift, and enter state 58
	%eof           reduce using rule 77

	Ident          goto state 70
	Integer        goto state 71
	PatternMatch   goto state 72
	ListPatternMatchgoto state 73

State 19


	'('            shift, and enter state 67
	'ref'          shift, and enter state 68
	L_Ident        shift, and enter state 28

	Ident          goto state 62
	RefDef         goto state 63
	Type           goto state 64
	Assignment     goto state 69

State 20


	'('            shift, and enter state 67
	'ref'          shift, and enter state 68
	L_Ident        shift, and enter state 28
	%eof           reduce using rule 82

	Ident          goto state 62
	RefDef         goto state 63
	Type           goto state 64
	Assignment     goto state 65
	ListAssignment goto state 66

State 21


	L_Ident        shift, and enter state 28

	Ident          goto state 45
	FunApplication goto state 61

State 22


	'('            shift, and enter state 42
	'['            shift, and enter state 44
	'force'        shift, and enter state 54
	'if'           shift, and enter state 55
	'let'          shift, and enter state 56
	'{'            shift, and enter state 57
	L_Ident        shift, and enter state 28
	L_integ        shift, and enter state 58
	L_quoted       shift, and enter state 59

	Ident          goto state 45
	Integer        goto state 46
	String         goto state 47
	ValueStatement goto state 48
	FunApplication goto state 49
	FunctionArgApplgoto state 60
	ListValueStatementrgoto state 52
	TupleValueStatementrgoto state 53

State 23

